# simulacrum-engine

./: README.md  pyproject.toml
simulacrum/: api.py  core.py  main.py  models.py  settings.py
simulacrum/api/: projects.py
simulacrum/models/: base.py  project.py
